--- a/NOBMain.xaml
+++ b/NOBMain.xaml
@@ -12,7 +12,7 @@
         <TextBox x:Name="認證TBox" HorizontalAlignment="Left" Height="20" Margin="240,3,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="145"/>
         <CheckBox x:Name="認證2CB" HorizontalAlignment="Left" Height="20" Margin="220,5,0,0" VerticalAlignment="Top" Width="20"/>
         <TextBox x:Name="全體選擇" Height="22" TextWrapping="Wrap" Width="33" Text="1" FontSize="14" MaxLength="1" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Left" Canvas.Left="199" Canvas.Top="78" VerticalAlignment="Top" Margin="385,50,0,0"/>
-
+      
         <!--第1排-->
         <ComboBox x:Name="CB_HID" SelectionChanged="CB_HID_SelectionChanged" Width="180" HorizontalAlignment="Left" Canvas.Left="39" Canvas.Top="26" VerticalAlignment="Top" Margin="35,25,0,0" />
         <Button x:Name="LockBtn" Content="驗證" Click="LockButton_Click" Height="21" Width="35" HorizontalAlignment="Left" Canvas.Left="220" Canvas.Top="26" VerticalAlignment="Top" Margin="220,25,0,0"/>
@@ -35,6 +35,8 @@
         <Canvas x:Name="腳本區" IsEnabled="False" Margin="0,80,0,0" >
             <ComboBox Visibility="Visible" VerticalAlignment="Top" SelectionChanged="SelectMenu_SelectionChanged" x:Name="SelectMenu" Height="20" Canvas.Left="5" Canvas.Top="0" Width="180"/>
             <CheckBox x:Name="StartCode" Content="啟動" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="88" Padding="0,-1,0,0" FontSize="18" FontWeight="Normal" RenderTransformOrigin="0.5,0.5" AutomationProperties.AcceleratorKey="" BorderThickness="1,1,1,1" IsEnabled="False" FontFamily="Arial Black" VerticalContentAlignment="Center" Grid.RowSpan="1" Visibility="Visible" Canvas.Top="0" Canvas.Left="200" Margin="0,1,0,0"/>
+            <CheckBox x:Name="VIPSP" Content="VIPSP" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="88" Padding="0,-1,0,0" FontSize="18" FontWeight="Normal" RenderTransformOrigin="0.5,0.5" AutomationProperties.AcceleratorKey="" BorderThickness="1,1,1,1" IsEnabled="False" FontFamily="Arial Black" VerticalContentAlignment="Center" Grid.RowSpan="1" Visibility="Visible" Canvas.Top="0" Canvas.Left="300" Margin="0,1,0,0"/>
+
         </Canvas>
         <TextBox x:Name="視窗狀態" HorizontalAlignment="Left" Height="69" Margin="420,5,0,0" TextWrapping="WrapWithOverflow" Text="" VerticalAlignment="Top" Width="200" MaxLines="2147483643" MaxLength="6" ScrollViewer.CanContentScroll="True" UseLayoutRounding="True" Visibility="Visible" IsReadOnly="True"/>
 
@@ -84,7 +86,6 @@
                     <Button x:Name="Btn_TargetB" Content="目標B" Click="OnTargetClick_B" Visibility="Visible" Width="57" HorizontalAlignment="Center" Canvas.Top="46" VerticalAlignment="Top"/>
                     <Button x:Name="Btn_TargetC" Content="目標C" Click="OnTargetClick_C" Visibility="Visible" Width="57" Canvas.Top="65" HorizontalAlignment="Center" VerticalAlignment="Top"/>
                     <CheckBox x:Name="CB_定位點" Content="定位點" Height="15" Width="63" HorizontalAlignment="Left" Canvas.Left="122" Canvas.Top="28" VerticalAlignment="Top" />
-
                 </Canvas>
                 <Canvas Visibility="Hidden" d:IsHidden="True" >
                     <StackPanel Height="180" Width="551" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="33">
