--- a/NOBMain.xaml
+++ b/NOBMain.xaml
@@ -63,7 +63,7 @@
                 <TextBox x:Name="FNPCID" HorizontalAlignment="Left" Height="20" Margin="57,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="118" Visibility="Hidden" Grid.ColumnSpan="2"/>
                 <TextBox x:Name="SMENU1" HorizontalAlignment="Left" Height="20" Margin="71,50,0,0" TextWrapping="Wrap" Text="6" VerticalAlignment="Top" Width="30" MaxLines="1" FontStyle="Normal" FontStretch="Medium" FontWeight="Bold" MaxLength="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Visibility="Visible" d:IsHidden="True"/>
                 <CheckBox x:Name="CB_AllIn" Content="全邀請" Margin="79,122,0,0" VerticalAlignment="Top" Visibility="Hidden" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="56"/>
-                <Canvas x:Name="TargetViewPage" Visibility="Visible" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <Canvas x:Name="TargetViewPage" Visibility="Visible" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsHidden="True">
                     <CheckBox x:Name="解無敵" Content="F5解無敵" Canvas.Left="55" Canvas.Top="140" HorizontalAlignment="Left" VerticalAlignment="Center" Width="74"/>
                     <CheckBox x:Name="CB_開打" Content="開打" Canvas.Left="0" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Top"/>
                     <TextBox x:Name="TBX搜尋範圍" TextWrapping="Wrap" Text="1000" Width="69" Canvas.Left="0" Canvas.Top="65" HorizontalAlignment="Left" VerticalAlignment="Top" Height="19" FontSize="14" FontWeight="Bold" TextAlignment="Center" ToolTip="搜尋範圍"/>
@@ -80,11 +80,15 @@
                     <TextBox x:Name="其他選項A" TextWrapping="Wrap" Text="2" Width="69" Canvas.Left="0" Canvas.Top="85" Height="19" FontSize="14" FontWeight="Bold" TextAlignment="Center" ToolTip="搜尋範圍" HorizontalAlignment="Left" VerticalAlignment="Top" TextChanged="限制點怪_TextChanged"/>
                     <TextBox x:Name="其他選項B" TextWrapping="Wrap" Text="2" Width="69" Canvas.Top="105" Height="19" FontSize="14" FontWeight="Bold" TextAlignment="Center" ToolTip="限制點怪 就是指打最上面搜尋到的 0 等於全部搜尋" TextChanged="限制點怪_TextChanged" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="0"/>
                 </Canvas>
-                <Canvas x:Name="有目標類Page" d:IsHidden="True">
+                <Canvas x:Name="有目標類Page">
                     <TextBox x:Name="後退時間" Height="20" TextWrapping="Wrap" Text="8000" Width="60" HorizontalAlignment="Left" Canvas.Left="62" Canvas.Top="26" VerticalAlignment="Top"/>
-                    <Button x:Name="Btn_TargetA" Content="目標A" Click="OnTargetClick_A" Visibility="Visible" Width="57" HorizontalAlignment="Center" Canvas.Top="26" VerticalAlignment="Top"/>
-                    <Button x:Name="Btn_TargetB" Content="目標B" Click="OnTargetClick_B" Visibility="Visible" Width="57" HorizontalAlignment="Center" Canvas.Top="46" VerticalAlignment="Top"/>
-                    <Button x:Name="Btn_TargetC" Content="目標C" Click="OnTargetClick_C" Visibility="Visible" Width="57" Canvas.Top="65" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                    <Button x:Name="Btn_TargetA" Content="目標A" Visibility="Visible" Width="57" HorizontalAlignment="Center" Canvas.Top="25" VerticalAlignment="Top"/>
+                    <Button x:Name="Btn_TargetB" Content="目標B" Visibility="Visible" Width="57" HorizontalAlignment="Center" Canvas.Top="45" VerticalAlignment="Top"/>
+                    <Button x:Name="Btn_TargetC" Content="目標C" Visibility="Visible" Width="57" HorizontalAlignment="Center" Canvas.Top="65" VerticalAlignment="Top"/>
+                    <Button x:Name="Btn_TargetD" Content="目標D" Visibility="Visible" Width="57" HorizontalAlignment="Center" Canvas.Top="85" VerticalAlignment="Top"/>
+                    <Button x:Name="Btn_TargetE" Content="目標E" Visibility="Visible" Width="57" HorizontalAlignment="Center" Canvas.Top="105" VerticalAlignment="Top"/>
+                    <Button x:Name="Btn_TargetF" Content="目標F" Visibility="Visible" Width="57" HorizontalAlignment="Center" Canvas.Top="125" VerticalAlignment="Top"/>
+
                     <CheckBox x:Name="CB_定位點" Content="定位點" Height="15" Width="63" HorizontalAlignment="Left" Canvas.Left="122" Canvas.Top="28" VerticalAlignment="Top" />
                 </Canvas>
                 <Canvas Visibility="Hidden" d:IsHidden="True" >
